--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,11 +6,12 @@ branches:
   only:
     - master  # ветка git
 
-build: off  # будем использовать свой скрипт сборки на сайте appveyor поставить в Settings-> build  
+build: off  # будем использовать свой скрипт сборки на сайте appveyor поставить в Settings-> build
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-mbank.jar &
+  - chmod +x gradlew
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
